IVXV 1.7.7, KOV2021